# interactsh-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
examples/: gen-sample-data.py  sample-interactions.jsonl
src/: app.rs  config.rs  main.rs  model.rs  ui.rs
