[package]
name = "oob-tui"
version = "0.1.0"
edition = "2021"
description = "TUI to browse, query, and timeline interactsh OOB-server interactions"
license = "MIT"

[dependencies]
ratatui = "0.29"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
flate2 = "1"

[profile.release]
opt-level = 2
